fixing last design details for shifts

--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,11 @@
   background-size: 200% 100%;
   animation: light-move 2s linear infinite;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
